--- a/locales/wcg-bot_da-DK.json
+++ b/locales/wcg-bot_da-DK.json
@@ -1,28 +1,30 @@
 {
-	"newAccount": "Opret en konto på World Community Grid (eller rediger en eksisterende) med følgende navn : {{username}} ",
+	"newAccount": "Opret en World Community Grid-konto på https://join.worldcommunitygrid.org?teamid={{teamId}} eller ret en eksisterende kontos username til {{username}} og sørg for at \"Display my data\"-valget til på My Profile-siden. Der er lavet en skridt-for-skridt guide på denne wiki-side: https://wiki.byteball.org/WCG_distribution#A_quick_guide_to_linking_your_wallet_with_WCG",
 	"usernameCanBeChanged": "Du kan ændre navnet senere hvis du vil. Klik på linket herunder når du er klar.",
 	"checkAccountButton": "Tjek min konto",
 	"accountLinked": "Din WCG-konto blev linket korrekt.",
-	"insertAddress": "Indsæt den adresse, du vil modtage udbetalinger på (klik på '...' Indsæt min adresse)",
+	"insertAddress": "Indsæt den adresse, du vil modtage udbetalinger til (click på '...'-knappen og vælg 'Indsæt min adresse')",
 	"addressLinked": "Tillykke!",
 	"setupComplete": "Opsætning fuldført. Du vil med jævne mellemrum modtage udbetalinger til din angivne konto i forhold til dit bidrag til World Community Grid med kontoen {{accountName}} (ID: {{accountID}})",
 	"changeLinkedButton": "Skift linket WCG-konto",
 	"changePayoutButton": "Skift udbetalings-adresse",
-	"changeUsernameButton": "Skift kontonavn",
-	"enterNewUsername": "Angiv det nye navn på din WCG-konto med ID {{accountID}}",
+	"changeUsernameButton": "Skift WCG brugernavn",
+	"enterNewUsername": "Angiv det nye brugernavn på din WCG-konto med ID {{accountID}}",
 	"cancelButton": "Annuller",
-	"usernameValidated": "Nyt navn bekræftet.",
+	"usernameValidated": "Nyt brugernavn bekræftet.",
 	"okButton": "ok",
-	"accountCheckFailed": "Tjek af konto mislykkedes. Sørg for at du har brugt {{accountName}} som kontonavn og prøv igen.",
-	"scoreFetchingFailed": "Kunne ikke hente din WCG-score til igangværende distribution. Sørg for at dit kontonavn er: {{accountName}}",
-	"payoutForCurrentWork": "Udbetaling på {{amountByte}}GB og {{amountAsset}} {{labelAsset}} er gennemført som tak for din indsats.",
+	"accountCheckFailed": "Konto-check mislykkedes. Sørg for at du har angivet {{accountName}} som brugernavn og at du har slået 'Display my data' til på My Profile-siden.",
+	"scoreFetchingFailed": "Kunne ikke hente din WCG-score til den igangværende distribution. Sørg for at dit brugernavn er {{accountName}} og at du har valgt 'Display my data' på My Profil-siden.",
+	"payoutForCurrentWork": "Udbetaling på {{amountByte}} GB og {{amountAsset}} {{labelAsset}} er gennemført som tak for din indsats.",
 	"errorOccurred": "Der opstod en fejl. Admin er adviseret om problemet. Prøv igen om et par timer.",
 	"seemsUnresponsive": "Fejl, World Community Grid svarer tilsyneladende ikke lige nu. Prøv igen senere.",
-	"usernameMismatch": "Navnet svarer ikke til WCG-kontoen med ID {{accountID}}",
+	"usernameMismatch": "Brugernavnet svarer ikke til WCG-kontoen med ID {{accountID}}",
 	"notValidAddress": "Det er en ugyldig adresse.",
 	"fixUsernameMismatch": "Kontonavnet {{accountName}} svarer ikke til ID {{accountID}}. Du vil ikke modtage betalinger før det er rettet eller du har linket en ny WCG-konto.",
 	"visitWiki": "For yderligere information, se vores wiki: https://wiki.byteball.org/WCG_distribution",
 	"retryButton": "Prøv igen",
-	"anotherUsernameButton": "Skift til et andet kontonavn",
-	"payoutForPreviousWork": "Udbetaling af {{amountByte}}GB og {{amountAsset}} {{labelAsset}} er sendt som tak for dit hidtidige bidrag til World Community Grid."
+	"anotherUsernameButton": "Skift til et andet brugernavn",
+	"payoutForPreviousWork": "Udbetaling af {{amountByte}} GB og {{amountAsset}} {{labelAsset}} er sendt som tak for dit hidtidige bidrag til World Community Grid.",
+	"userInTeam": "Som medlem af byteball.org-holdet modtager du en bonus på {{bonus}}%.",
+	"userNotInTeam": "Du kan tilmelde dig byteball.org-holdet og modtage en bonus på {{bonus}}%. Gå til https://www.worldcommunitygrid.org/team/viewTeamInfo.do?teamId={{teamId}} for at tilmelde dig holdet."
 }
