--- a/locales/wcg-bot_el-GR.json
+++ b/locales/wcg-bot_el-GR.json
@@ -1,28 +1,30 @@
 {
-	"newAccount": "Παρακαλούμε δημιουργήστε έναν λογαριασμό World Community Grid στο https://join.worldcommunitygrid.org?teamId={{teamId}} ή επεξεργαστείτε έναν υπάρχον με το εξής όνομα: {{username}}",
+	"newAccount": "Παρακαλούμε δημιουργήστε έναν λογαριασμό World Community Grid στο https://join.worldcommunitygrid.org?teamId={{teamId}} ή τροποποιήστε έναν ήδη υπάρχων λογαριασμό με αυτό το όνομα χρήστη: {{username}} και επιβεβαιώστε πως ενεργοποιήσατε την επιλογή 'Προβολή των δεδομένων μου' στην σελίδα 'Το Προφίλ Μου'. Οδηγίες βήμα προς βήμα, μπορείτε να βρείτε στην παρακάτω σελίδα του wiki https://wiki.byteball.org/WCG_distribution#A_quick_guide_to_linking_your_wallet_with_WCG",
 	"usernameCanBeChanged": "Μπορείτε να το αλλάξετε αργότερα, εάν το επιθυμείτε. Κάντε κλικ στον παρακάτω σύνδεσμο όταν τελειώσετε.",
 	"checkAccountButton": "Έλεγχος του λογαριασμού μου",
 	"accountLinked": "Ο λογαριασμός WCG έχει συνδεθεί επιτυχώς.",
-	"insertAddress": "Παρακαλούμε εισάγετε τη διεύθυνση που θέλετε να χρησιμοποιήσετε σαν διεύθυνση πληρωμών (κλικ στο '...' Εισαγωγή διεύθυνσης)",
+	"insertAddress": "Παρακαλούμε εισάγετε τη διεύθυνση που θέλετε να χρησιμοποιήσετε σαν διεύθυνση πληρωμών (κλικ στο '...' και μετά κλικ στο 'Εισαγωγή Διεύθυνσης')",
 	"addressLinked": "Συγχαρητήρια!",
 	"setupComplete": "Η ρύθμιση ολοκληρώθηκε! Περιοδικά, επιβραβεύσεις ανάλογες με τη συνεισφορά σας στο World Community Grid project στο λογαριασμό {{accountName}} (ID: {{accountID}}) θα αποστέλλονται στη διεύθυνση πληρωμών σας.",
 	"changeLinkedButton": "Αλλαγή συνδεδεμένου λογαριασμού WCG",
 	"changePayoutButton": "Αλλαγή διεύθυνσης πληρωμών",
-	"changeUsernameButton": "Αλλαγή ονόματος λογαριασμού",
-	"enterNewUsername": "Παρακαλούμε εισάγετε το νέο όνομα λογαριασμού WCG {{accountID}}",
+	"changeUsernameButton": "Αλλαγή ονόματος χρήστη WCG",
+	"enterNewUsername": "Παρακαλούμε εισάγετε το νέο όνομα του λογαριασμού WCG με ID {{accountID}}",
 	"cancelButton": "ακύρωση",
-	"usernameValidated": "Το νέο όνομα επικυρώθηκε.",
+	"usernameValidated": "Το νέο όνομα χρήστη επικυρώθηκε.",
 	"okButton": "οκ",
-	"accountCheckFailed": "Ο έλεγχος του λογαριασμού απέτυχε. Παρακαλούμε βεβαιωθείτε πως έχετε ορίσει το {{accountName}} σαν όνομα λογαριασμού και προσπαθήστε ξανά.",
-	"scoreFetchingFailed": "Αδυναμία ελέγχου του WCG σκορ σας για την συνεχή διανομή. Παρακαλούμε επιβεβαιώστε ότι το όνομα λογαριασμού είναι {{accountName}}",
-	"payoutForCurrentWork": "Μια πληρωμή {{amountByte}}GB και {{amountAsset}} {{labelAsset}} έγινε ως επιβράβευση για την συμβολή σας.",
+	"accountCheckFailed": "Ο έλεγχος του λογαριασμού απέτυχε. Παρακαλούμε σιγουρευτείτε πως έχετε ορίσει το {{accountName}} σαν όνομα χρήστη και πως έχετε επιλέξει το 'Προβολή των δεδομένων μου' στην σελίδα 'Το Προφίλ Μου'.",
+	"scoreFetchingFailed": "Δεν είμαστε σε θέση να πάρουμε το σκορ σας στο WCG για την τρέχουσα διανομή. Παρακαλούμε σιγουρευτείτε πως έχετε ορίσει το {{accountName}} σαν όνομα χρήστη και πως έχετε επιλέξει το 'Προβολή των δεδομένων μου' στην σελίδα 'Το Προφίλ Μου'.",
+	"payoutForCurrentWork": "Μια πληρωμή {{amountByte}} GB και {{amountAsset}} {{labelAsset}} έγινε ως επιβράβευση για την συμβολή σας.",
 	"errorOccurred": "Μη αναμενόμενο σφάλμα. Έχει ειδοποιηθεί ο διαχειριστής. Προσπαθήστε ξανά σε λίγες ώρες.",
 	"seemsUnresponsive": "Σφάλμα, το World Community Grid δεν ανταποκρίνεται. Παρακαλώ προσπαθήστε αργότερα.",
-	"usernameMismatch": "Το όνομα δεν αντιστοιχεί στο αναγνωριστικό λογαριασμού WCG {{accountID}}",
+	"usernameMismatch": "Αυτό το όνομα δεν αντιστοιχεί στο όνομα χρήστη του λογαριασμού WCG με ID {{accountID}}",
 	"notValidAddress": "Αυτή δεν είναι μια έγκυρη διεύθυνση.",
-	"fixUsernameMismatch": "Το όνομα λογαριασμού: {{accountName}} δεν αντιστοιχεί στο αναγνωριστικό {{accountID}}. Δε θα λάβετε πληρωμές μέχρι να διορθώσετε το πρόβλημα ή να συνδέσετε νέο λογαριασμό WCG.",
+	"fixUsernameMismatch": "Το όνομα χρήστη: {{accountName}} δεν αντιστοιχεί στο ID {{accountID}}. Δεν θα λάβετε πληρωμές μέχρι να διορθώσετε το πρόβλημα ή να συνδέσετε νέο λογαριασμό WCG.",
 	"visitWiki": "Για περισσότερες πληροφορίες, παρακαλούμε επισκεφθείτε το wiki: https://wiki.byteball.org/WCG_distribution",
 	"retryButton": "Επανάληψη",
-	"anotherUsernameButton": "Αλλαγή ονόματος λογαριασμού",
-	"payoutForPreviousWork": "Μια πληρωμή {{amountByte}}GB και {{amountAsset}} {{labelAsset}} έγινε ως επιβράβευση για την συμβολή σας στο World Community Grid."
+	"anotherUsernameButton": "Αλλαγή ονόματος χρήστη",
+	"payoutForPreviousWork": "Μια πληρωμή {{amountByte}} GB και {{amountAsset}} {{labelAsset}} έγινε ως επιβράβευση για την συμβολή σας στο World Community Grid.",
+	"userInTeam": "Σαν μέλος της ομάδας του byteball.org, θα πάρετε μπόνους {{bonus}}%.",
+	"userNotInTeam": "Μπορείτε να γίνετε μέλος της ομάδας του bytebal.org και να πάρετε μπόνους {{bonus}}%. Πηγαίνετε στην σελίδα https://www.worldcommunitygrid.org/team/viewTeamInfo.do?teamId={{teamId}} για να γίνετε μέλος."
 }
