--- a/locales/wcg-bot_it-IT.json
+++ b/locales/wcg-bot_it-IT.json
@@ -1,28 +1,30 @@
 {
-	"newAccount": "Crea un account World Community Grid oppure modificane uno esistente con questo username: {{username}}",
+	"newAccount": "Si prega di creare un account su World Community Grid tramite il link https://join.worldcommunitygrid.org?teamId={{teamId}} oppure modificarne uno esistente con questo nome utente: {{username}} ed assicurarsi di aver scelto 'Mostra i miei dati' nella pagina \"Il mio profilo\". La guida passo dopo passo può essere vista sulla pagina wiki https://wiki.byteball.org/WCG_distribution#A_quick_guide_to_linking_your_wallet_with_WCG",
 	"usernameCanBeChanged": "Puoi cambiarlo più tardi se lo desideri. Clicca sul link qui sotto quando hai finito.",
 	"checkAccountButton": "Controlla il mio account",
 	"accountLinked": "Il tuo account WCG è stato collegato con successo.",
-	"insertAddress": "Si prega di inserire l'indirizzo che si desidera utilizzare come indirizzo di pagamento (fare clic su '...' Inserisci il mio indirizzo)",
+	"insertAddress": "Si prega di inserire l'indirizzo che si desidera utilizzare come indirizzo di pagamento (fare clic sul pulsante '...' e successivamente su 'Inserisci il mio indirizzo')",
 	"addressLinked": "Congratulazioni!",
 	"setupComplete": "Installazione completata! Periodicamente, i premi proporzionali al tuo contributo al progetto World Community Grid con l'account {{accountName}} (ID: {{accountID}}) verranno inviati al tuo account di pagamento.",
 	"changeLinkedButton": "Cambia account WCG collegato",
 	"changePayoutButton": "Cambia indirizzo di pagamento",
-	"changeUsernameButton": "Cambia il nome dell'account",
-	"enterNewUsername": "Inserisci il nuovo nome per il tuo ID account WCG {{accountID}}",
+	"changeUsernameButton": "Cambia username WCG",
+	"enterNewUsername": "Inserisci il nuovo username per il tuo ID account WCG {{accountID}}",
 	"cancelButton": "annullare",
-	"usernameValidated": "Nuovo nome convalidato.",
+	"usernameValidated": "Nuovo username convalidato.",
 	"okButton": "ok",
-	"accountCheckFailed": "Controllo account fallito. Assicurati di aver impostato {{accountName}} come nome account e riprova.",
-	"scoreFetchingFailed": "Impossibile ottenere il tuo WCG score per la distribuzione in corso. Assicurati che il nome account sia: {{accountName}}",
-	"payoutForCurrentWork": "È stato effettuato un pagamento di {{amountByte}}GB e {{amountAsset}} {{labelAsset}} per premiare il tuo contributo.",
+	"accountCheckFailed": "Controllo dell'account fallito. Assicurarsi di aver impostato {{accountName}} come username e di aver selezionato l'opzione 'Mostra i miei dati' nella pagina \"Il mio profilo\".",
+	"scoreFetchingFailed": "Impossibile ottenere il tuo punteggio WCG per la distribuzione in corso. Assicurati che il tuo username sia: {{accountName}} e che tu abbia scelto l'opzione 'Mostra i miei dati' nella pagina \"Il mio profilo\".",
+	"payoutForCurrentWork": "E' stato effettuato un pagamento di {{amountByte}} GB e {{amountAsset}} {{labelAsset}} per premiare il tuo contributo.",
 	"errorOccurred": "Si è verificato un errore imprevisto. E' stata inviata una notifica all'Admin. Perfavore riprova tra qualche ora.",
 	"seemsUnresponsive": "Errore, World Community Grid sembra non rispondere. Si prega di riprovare più tardi.",
-	"usernameMismatch": "Questo nome non corrisponde all'account WCG con ID {{accountID}}",
+	"usernameMismatch": "Questo username non corrisponde all'account WCG con ID {{accountID}}",
 	"notValidAddress": "Questo non è un indirizzo valido.",
-	"fixUsernameMismatch": "Il nome account: {{accountName}} non corrisponde all'ID {{accountID}}. Non riceverai i pagamenti finché non correggi questo problema o non colleghi il tuo nuovo account WCG.",
+	"fixUsernameMismatch": "Lo username: {{accountName}} non corrisponde all'ID {{accountID}}. Non riceverai i pagamenti finché non correggi questo problema o non colleghi il tuo nuovo account WCG.",
 	"visitWiki": "Per ulteriori informazioni, visita la nostra wiki: https://wiki.byteball.org/WCG_distribution",
 	"retryButton": "Riprova",
-	"anotherUsernameButton": "Cambia con un altro nome account",
-	"payoutForPreviousWork": "È stato effettuato un pagamento di {{amountByte}}GB e {{amountAsset}} {{labelAsset}} per premiare il tuo precedente contributo alla World Community Grid."
+	"anotherUsernameButton": "Cambia con un altro username",
+	"payoutForPreviousWork": "E' stato effettuato un pagamento di {{amountByte}} GB e {{amountAsset}} {{labelAsset}} per premiare il tuo precedente contributo alla World Community Grid.",
+	"userInTeam": "Come membro del team di byteball.org, riceverai un bonus del {{bonus}}%.",
+	"userNotInTeam": "Puoi unirti al team di byteball.org ed ottenere un bonus del {{bonus}}%. Vai su https://www.worldcommunitygrid.org/team/viewTeamInfo.do?teamId={{teamId}} per unirti a noi."
 }
