--- a/locales/wcg-bot_ko-KR.json
+++ b/locales/wcg-bot_ko-KR.json
@@ -1,28 +1,30 @@
 {
-	"newAccount": "World Community Grid 계정을 만들거나 기존 계정을 이 사용자 이름으로 변경해주세요: {{username}} ",
+	"newAccount": "https://join.worldcommunitygrid.org?teamId={{teamId}}에서 World Community Grid 계정을 생성하거나 기존 계정을 이 사용자 이름 {{username}} 으로 변경해주세요. 또한, 내 프로필 화면에서 'Display my data'를 선택했는지 확인해주세요. 단계별 가이드 문서는 위키 페이지에서 확인하실 수 있습니다 https://wiki.byteball.org/WCG_distribution#A_quick_guide_to_linking_your_wallet_with_WCG",
 	"usernameCanBeChanged": "언제든지 설정은 변경할 수 있습니다. 완료하셨다면 아래 링크를 클릭해주세요.",
 	"checkAccountButton": "내 계정 확인하기",
 	"accountLinked": "WCG 계정이 성공적으로 연결되었습니다.",
-	"insertAddress": "지불 주소로 사용할 주소를 입력해주세요 ('...' 표시된 곳을 클릭한 후 내 주소를 입력합니다)",
+	"insertAddress": "지급받을 주소를 입력해주세요 ('...' 을 클릭 후 '내 주소 삽입'을 선택합니다)",
 	"addressLinked": "축하합니다!",
-	"setupComplete": "설정이 완료되었습니다! 주기적으로 이 계정 {{accountName}} (ID: {{accountID}}) 을 통해 발생한 World Community Grid 프로젝트 공헌에 비례한 보상이 여러분의 지불 계정으로 제공될 것입니다.",
+	"setupComplete": "설정이 완료되었습니다! 주기적으로 이 계정 {{accountName}} (ID: {{accountID}}) 에서 발생한 World Community Grid 프로젝트 공헌에 비례해 여러분의 지급 계정으로 보상이 제공될 것입니다.",
 	"changeLinkedButton": "연결된 WCG 계정 변경하기",
-	"changePayoutButton": "지불 주소 변경하기",
-	"changeUsernameButton": "계정 이름 변경하기",
-	"enterNewUsername": "WCG 계정 아이디 {{accountID}}를 위해 새로운 이름을 입력해주세요",
+	"changePayoutButton": "지급받을 주소 변경하기",
+	"changeUsernameButton": "WCG 사용자 이름 변경하기",
+	"enterNewUsername": "WCG 계정 아이디 {{accountID}}로 사용할 새로운 이름을 입력해주세요",
 	"cancelButton": "취소",
 	"usernameValidated": "사용할 수 있는 이름입니다.",
 	"okButton": "확인",
-	"accountCheckFailed": "계정 확인에 실패했습니다. 입력하신 계정 이름이 {{accountName}} 이 맞는지 확인하신 다음 다시 시도해주세요.",
-	"scoreFetchingFailed": "진행 중인 분배에 대한 WCG 점수를 확인할 수 없습니다. 계정 이름을 확인해주세요: {{accountName}}",
-	"payoutForCurrentWork": "{{amountByte}}GB 와 {{amountAsset}} {{labelAsset}} 과 관련된 공헌에 대한 보상입니다.",
-	"errorOccurred": "예기치 못한 에러가 발생했습니다. 관리자도 이 사실을 알고 있습니다. 몇 시간 뒤에 다시 시도해주세요.",
-	"seemsUnresponsive": "Error, World Community Grid seems unresponsive. Please retry later.",
-	"usernameMismatch": "이 이름은 WCG 계정 ID {{accountID}}와 일치하지 않습니다",
+	"accountCheckFailed": "계정을 확인하는데 실패했습니다. 사용자 이름을 {{accountName}} 으로 설정했는지 확인하시고 내 프로필 화면에서 'Display my data' 옵션을 선택했는지도 확인 바랍니다.",
+	"scoreFetchingFailed": "분배될 WCG 점수를 확인할 수 없습니다. 사용자 이름을 {{accountName}} 으로 설정했는지 확인하시고 내 프로필 화면에서 'Display my data' 옵션을 선택했는지도 확인 바랍니다.",
+	"payoutForCurrentWork": "공헌에 대한 보상으로 {{amountByte}} GB 와 {{amountAsset}} {{labelAsset}}가 지급되었습니다.",
+	"errorOccurred": "예기치 못한 에러가 발생했습니다. 관리자에게도 보고되었습니다. 몇 시간 뒤에 다시 시도해주세요.",
+	"seemsUnresponsive": "에러, World Community Grid에 문제가 생긴 것 같습니다. 나중에 다시 시도해주세요.",
+	"usernameMismatch": "이 사용자 이름은 WCG 계정 ID {{accountID}}와 일치하지 않습니다",
 	"notValidAddress": "주소 정보가 올바르지 않습니다.",
-	"fixUsernameMismatch": "계정 이름: {{accountName}} 이 ID {{accountID}} 와 일치하지 않습니다. 이 문제를 해결하지 못하거나 새로운 WCG 계정을 연결하지 않으면 보상이 지급되지 않습니다",
+	"fixUsernameMismatch": "사용자 이름: {{accountName}} 이 ID {{accountID}} 와 일치하지 않습니다. 이 문제를 해결하지 못하거나 새로운 WCG 계정을 연결하지 않으면 보상이 지급되지 않습니다",
 	"visitWiki": "추가 정보는 위키 사이트를 방문해주세요: https://wiki.byteball.org/WCG_distribution",
 	"retryButton": "재시도",
-	"anotherUsernameButton": "다른 계정 이름으로 변경하기",
-	"payoutForPreviousWork": "{{amountByte}}GB 와 {{amountAsset}} {{labelAsset}} 는 World Community Grid와 관련된 공헌에 대한 보상입니다."
+	"anotherUsernameButton": "다른 사용자 이름으로 변경하기",
+	"payoutForPreviousWork": "{{amountByte}}GB 와 {{amountAsset}} {{labelAsset}} 는 이전에 수행한 World Community Grid 관련 공헌 보상입니다.",
+	"userInTeam": "byteball.org 팀 구성원이라면 {{bonus}}%를 보너스로 받을 수 있을 것입니다.",
+	"userNotInTeam": "byteball.org 팀에 합류해서 {{bonus}}% 보너스를 받으세요. 가입은 이곳에서 하시면 됩니다: https://www.worldcommunitygrid.org/team/viewTeamInfo.do?teamId={{teamId}}."
 }
