--- a/locales/wcg-bot_nl-NL.json
+++ b/locales/wcg-bot_nl-NL.json
@@ -1,5 +1,5 @@
 {
-	"newAccount": "Maak alsjeblieft een World Community Grid account aan op https://join.worldcommunitygrid.org?teamId={{teamId}} of geef een bestaand account de volgende gebruikersnaam: {{username}}",
+	"newAccount": "Maak alsjeblieft een World Community Grid account aan via https://join.worldcommunitygrid.org?teamId={{teamId}} of verander een bestaand account met gebruikersnaam: {{username}} en zorg er voor dat je de \"Data weergeven\" optie aan hebt staan in Mijn Profiel. Een stap voor stap pagina kan worden gevonden op de wiki pagina https://wiki.byteball.org/WCG_distribution#A_quick_guide_to_linking_your_wallet_with_WCG",
 	"usernameCanBeChanged": "Je kan het later terug veranderen als je dit zou willen. Klik als je klaar bent op de onderstaande link.",
 	"checkAccountButton": "Controleer mijn account",
 	"accountLinked": "Je WCG account is succesvol gelinkt.",
@@ -8,21 +8,23 @@
 	"setupComplete": "Setup voltooid! Eens in de zoveel tijd zullen beloningen, proportioneel aan contributies aan World Community Grid projecten van het account {{accountName}} (ID: {{accountID}}), naar je betaling account worden verstuurd.",
 	"changeLinkedButton": "Verander het gelinkte WCG account",
 	"changePayoutButton": "Verander het betaling adres",
-	"changeUsernameButton": "Verander de naam van het account",
+	"changeUsernameButton": "WCG gebruikersnaam veranderen",
 	"enterNewUsername": "Vul alsjeblieft de nieuwe naam van je WCG account id {{accountID}} in",
 	"cancelButton": "annuleren",
-	"usernameValidated": "Nieuwe naam gevalideerd.",
+	"usernameValidated": "Nieuwe gebruikersnaam gevalideerd.",
 	"okButton": "ok",
-	"accountCheckFailed": "Account check mislukt. Zorg alsjeblieft dat je {{accountName}} als account naam hebt ingesteld, en probeer het opnieuw.",
-	"scoreFetchingFailed": "Niet in staat om je WCG score te krijgen voor de huidige distributie. Controleer alsjeblieft of je accountnaam {{accountname}} is.",
-	"payoutForCurrentWork": "Een betaling van {{amountByte}}GB en {{amountAsset}} {{labelAsset}} was gemaakt om je contributie te belonen.",
+	"accountCheckFailed": "Account controle mislukt. Controleer alsjeblieft of je {{accountName}} als gebruikersnaam hebt ingesteld en dat je de optie 'Toon mijn gegevens' op de pagina Mijn Profiel hebt geselecteerd.",
+	"scoreFetchingFailed": "Niet in staat om je WCG score voor de huidige distributie op te vragen. Controleer of je gebruikersnaam \"{{accountName}}\" is en dat je hebt gekozen voor 'Toon mijn gegevens' op Mijn Profiel.",
+	"payoutForCurrentWork": "Een betaling van {{amountByte}} GB en {{amountAsset}}{{labelAsset}} was gemaakt om je contributie te belonen.",
 	"errorOccurred": "Er is een onverwachte fout opgetreden. De administrator is op de hoogte gebracht. Probeer het alsjeblieft over een paar uur opnieuw.",
 	"seemsUnresponsive": "Fout, World Community Grid reageert niet. Probeer het later opnieuw.",
-	"usernameMismatch": "Deze naam komt niet overeen met het WCG account ID {{accountID}}",
+	"usernameMismatch": "Deze gebruikersnaam komt niet overeen met het WCG account ID {{accountID}}",
 	"notValidAddress": "Dit is geen geldig adres.",
-	"fixUsernameMismatch": "Het account {{accountName}} komt niet overeen met het ID {{accountID}}. Je zal geen betalingen ontvangen totdat dit is opgelost of je een nieuwe WCG account hebt gelinkt.",
+	"fixUsernameMismatch": "De gebruikersnaam: {{accountName}} komt niet overeen met het ID {{accountID}}. Je zal geen betalingen ontvangen totdat dit is opgelost of totdat je een nieuw WCG account hebt gelinkt.",
 	"visitWiki": "Voor meer informatie, bezoek onze wiki: https://wiki.byteball.org/WCG_distribution",
 	"retryButton": "Probeer opnieuw",
-	"anotherUsernameButton": "Verander naar een andere accountnaam",
-	"payoutForPreviousWork": "Een betaling van {{amountByte}}GB en {{amountAsset}} {{labelAsset}} was gemaakt om je te belonen voor je vorige contributies aan World Community Grid."
+	"anotherUsernameButton": "Verander naar een andere gebruikersnaam",
+	"payoutForPreviousWork": "Een betaling van {{amountByte}} GB en {{amountAsset}}{{labelAsset}} was gemaakt om je te belonen voor je vorige contributies aan World Community Grid.",
+	"userInTeam": "Als lid van team byteball.org krijg je een {{bonus}}% bonus.",
+	"userNotInTeam": "Je kan lid worden van het byteball.org team en een {{bonus}}% bonus krijgen. Ga naar https://www.worldcommunitygrid.org/team/viewTeamInfo.do?teamId={{teamId}} om lid te worden."
 }
