--- a/locales/wcg-bot_ru-RU.json
+++ b/locales/wcg-bot_ru-RU.json
@@ -1,28 +1,30 @@
 {
-	"newAccount": "Пожалуйста, создайте новую учётную запись в Глобальной Сети Сообщества (World Community Grid) или измените существующую, используя следующее имя пользователя: {{username}}",
+	"newAccount": "Пожалуйста, создайте аккаунт на World Community Grid на сайте https://join.worldcommunitygrid.org?teamId={{teamId}} или измените имя в уже существующем на: {{username}} и убедитесь, что вы выбрали опцию \"Отображать мои данные\" на странице Мой профиль. Пошаговую инструкцию можно увидеть на странице wiki https://wiki.byteball.org/WCG_distribution#A_quick_guide_to_linking_your_wallet_with_WCG",
 	"usernameCanBeChanged": "При желании вы можете изменить её позднее. После этого щёлкните по ссылке ниже.",
-	"checkAccountButton": "Проверьте свою учётную запись",
-	"accountLinked": "Ваш учётная запись в WCG успешно подсоединена.",
-	"insertAddress": "Пожалуйста, вставьте адрес, который вы хотите использовать в качестве адреса для выплат (щёлкните по '...' Вставить мой адрес)",
+	"checkAccountButton": "Проверить мой акккаунт",
+	"accountLinked": "Ваша учётная запись в WCG успешно подсоединена.",
+	"insertAddress": "Пожалуйста, вставьте адрес, который вы хотите использовать в качестве адреса для выплат (щёлкните по '...', а затем нажмите 'Вставить мой адрес')",
 	"addressLinked": "Поздравляем!",
 	"setupComplete": "Установка завершена! Награда, пропорциональная вашему вкладу в развитие проекта Глобальной Сети Сообщества WCG под учётной записью {{accountName}} (ID: {{accountID}}) периодически будет отправляться на ваш адрес для выплат.",
 	"changeLinkedButton": "Изменить связанную учётную запись в WCG",
 	"changePayoutButton": "Изменить адрес для выплат",
-	"changeUsernameButton": "Изменить имя учётной записи",
-	"enterNewUsername": "Пожалуйста, введите новое имя вашей учётной записи в WCG для ID {{accountID}}",
+	"changeUsernameButton": "Изменить имя пользователя WCG",
+	"enterNewUsername": "Пожалуйста, введите новое имя для вашего аккаунта WCG с ID {{accountID}}",
 	"cancelButton": "Отменить",
-	"usernameValidated": "Новое имя подтверждено.",
-	"okButton": "Окей",
-	"accountCheckFailed": "Сбой проверки учётной записи. Пожалуйста, проверьте правильность установленной учётной записи {{accountName}} и повторите ещё раз.",
-	"scoreFetchingFailed": "Невозможно получить ваш WCG-баланс для планируемых выплат. Пожалуйста, убедитесь в том, что ваша учетная запись {{accountName}} верна.",
-	"payoutForCurrentWork": "В качестве награды за ваш вклад сделана выплата в размере {{amountByte}}GB и {{amountAsset}} {{labelAsset}}.",
+	"usernameValidated": "Новое имя пользователя подтверждено.",
+	"okButton": "ок",
+	"accountCheckFailed": "Проверка аккаунта не пройдена. Пожалуйста, убедитесь, что вы установили {{accountName}} в качестве имени пользователя и выбрали опцию 'Отображать мои данные' на страничке профиля.",
+	"scoreFetchingFailed": "Невозможно получить ваш балл на WCG для предстоящего распределения. Пожалуйста, убедитесь, что ваше имя пользователя: {{accountName}} и что у вас включена опция 'Отображать мои данные' на страничке профиля.",
+	"payoutForCurrentWork": "Выплата в размере {{amountByte}} GB и {{amountAsset}} {{labelAsset}} была сделана в качестве вознаграждения за ваш вклад.",
 	"errorOccurred": "Возникла неожиданная ошибка. Администратор уведомлён. Пожалуйста, повторите операцию через несколько часов.",
 	"seemsUnresponsive": "Ошибка, World Community Grid не отвечает. Пожалуйста, повторите попытку позже.",
-	"usernameMismatch": "Это имя не соответствует учётной записи WCG ID {{accountID}}",
+	"usernameMismatch": "Это имя пользователя не соответствует аккаунту WCG с ID {{accountID}}",
 	"notValidAddress": "Недействительный адрес.",
-	"fixUsernameMismatch": "Имя учётной записи: {{accountName}} не соответствует её ID {{accountID}}. Вы не сможете получать выплаты пока не исправите соответствие или не привяжете ID к новой учётной записи WCG.",
+	"fixUsernameMismatch": "Имя аккаунта: {{accountName}} не соответствует ID {{accountID}}. Вы не сможете получать выплаты, пока не решите этот вопрос или не привяжете ноый аккаунт WCG.",
 	"visitWiki": "Подробности смотрите на нашем wiki по ссылке: https://wiki.byteball.org/WCG_distribution",
 	"retryButton": "Попытаться снова",
-	"anotherUsernameButton": "Изменить имя учётной записи на другое",
-	"payoutForPreviousWork": "За предыдущий вклад в развитие Глобальной Сети Сообщества (World Community Grid) вам выплачено {{amountByte}}GB и {{amountAsset}} {{labelAsset}}."
+	"anotherUsernameButton": "Изменить на другое имя пользователя",
+	"payoutForPreviousWork": "За предыдущий вклад в развитие Глобальной Сети Сообщества (World Community Grid) вам выплачено вознаграждение {{amountByte}} GB и {{amountAsset}} {{labelAsset}}.",
+	"userInTeam": "Как член команды byteball.org вы получите {{bonus}}% бонус.",
+	"userNotInTeam": "Вы можете присоединиться к команде byteball.org и получить {{bonus}}% бонус. Перейдите на https://www.worldcommunitygrid.org/team/viewTeamInfo.do?teamId={{teamId}} чтобы присоединиться к нам."
 }
