--- a/locales/wcg-bot_zh-CN.json
+++ b/locales/wcg-bot_zh-CN.json
@@ -1,28 +1,30 @@
 {
-	"newAccount": "请在 https://join.worldcommunitygrid.org?teamId={{teamId}} 创建一个世界社区网格帐号, 或者用此用户名修改现有帐号: {{username}}",
+	"newAccount": "请在https://join.worldcommunitygrid.org?teamId={{teamId}}创建一个World Community Grid帐户，或者以此用户名：{{username}} 修改现有帐户，并确保在您的个人资料页面选中“显示我的数据”选项。可在如下维基页面查看分步指南：https://wiki.byteball.org/WCG_distribution#A_quick_guide_to_linking_your_wallet_with_WCG",
 	"usernameCanBeChanged": "如果你想要的话，可以在后续对它进行修改。完成后请点击以下链接.",
 	"checkAccountButton": "核对我的账号",
 	"accountLinked": "WCG 账号已成功连接.",
-	"insertAddress": "请插入接收付款地址 (点击'...' 插入我的地址)",
+	"insertAddress": "您插入您的付款地址 (单击 '...' 按钮后单击 '插入我的地址')",
 	"addressLinked": "恭喜完成!",
 	"setupComplete": "设置完成! 账号{{accountName}} (ID: {{accountID}}) 对全球社区网格项目所做的贡献会按比例定期发放到付款账号。",
 	"changeLinkedButton": "更改连接的WCG 账号",
 	"changePayoutButton": "更改支付地址",
-	"changeUsernameButton": "更改账号名字",
-	"enterNewUsername": "请填入你的WCG 账号id {{accountID}} 的新名字",
+	"changeUsernameButton": "更改 WCG 用户名",
+	"enterNewUsername": "请为您的 WCG 账户 ID {{accountID}} 输入新用户名",
 	"cancelButton": "取消",
-	"usernameValidated": "新名字已验证.",
+	"usernameValidated": "已验证新用户名。",
 	"okButton": "ok",
-	"accountCheckFailed": "账号核对失败. 请确保把{{accountName}} 设置为账号名并重试.",
-	"scoreFetchingFailed": "无法得到正在分配中的WCG得分。请确定账号名是: {{accountName}}",
-	"payoutForCurrentWork": "已经支付{{amountByte}}GB 和{{amountAsset}} {{labelAsset}} 来奖励你做出的贡献.",
+	"accountCheckFailed": "账户检查失败。请确保您使用 {{accountName}} 作为用户名，且在我的个人资料页面选中”显示我的数据“选项。",
+	"scoreFetchingFailed": "无法为正在进行的分发获得您的WCG分数。请确保您的用户名为：{{accountName}}，且您在我的个人资料页面选中'显示我的数据'选项。",
+	"payoutForCurrentWork": "已经支付 {{amountByte}} GB 和 {{amountAsset}} {{labelAsset}} 来奖励您做出的贡献。",
 	"errorOccurred": "出现意外错误。已经通知管理员。请在几小时后再试.",
 	"seemsUnresponsive": "出错，世界社区网格似乎没有反应。请稍后再试。",
-	"usernameMismatch": "此名字和WCG 账号ID {{accountID}}不符",
+	"usernameMismatch": "这个用户名与 WCG 账户 ID {{accountID}} 不符",
 	"notValidAddress": "这个地址无效.",
-	"fixUsernameMismatch": "账号名: {{accountName}}和ID {{accountID}}不吻合. 在此问题被修正或者连接到新的WCG 账号之前无法接收付款.",
+	"fixUsernameMismatch": "用户名：{{accountName}} 与 ID {{accountID}} 不符。在您修正这个错误或链接到新的WCG账户之前，您不会收到付款。",
 	"visitWiki": "需要更多信息，请访问我们wiki: https://wiki.byteball.org/WCG_distribution",
 	"retryButton": "重试",
-	"anotherUsernameButton": "更改到另一个账号",
-	"payoutForPreviousWork": "已经支付{{amountByte}}GB 和{{amountAsset}} {{labelAsset}} 来奖励你之前对全球社区网格所做的贡献 ."
+	"anotherUsernameButton": "更改到另一个用户名",
+	"payoutForPreviousWork": "已经支付 {{amountByte}} GB 和 {{amountAsset}} {{labelAsset}} 来奖励您之前对世界社区网格所做出的贡献。",
+	"userInTeam": "作为 byteball.org 团队成员，您会获得 {{bonus}}% 的奖金。",
+	"userNotInTeam": "您可以加入 byteball.org 团队，以获得 {{bonus}}% 奖金。请访问 https://www.worldcommunitygrid.org/team/viewTeamInfo.do?teamId={{teamId}} 来加入我们。"
 }
