--- a/locales/wcg-bot_vi-VN.json
+++ b/locales/wcg-bot_vi-VN.json
@@ -1,21 +1,21 @@
 {
-	"newAccount": "Vui lòng tạo tài khoản Mạng lưới Cộng đồng Thế giới tại https://join.worldcommunitygrid.org?teamId={{teamId}} hoặc sửa đổi tài khoản hiện có với tên người dùng này: {{username}}",
+	"newAccount": "Vui lòng tạo tài khoản với mạng Lưới Cộng đồng Quốc tế tại https://join.worldcommunitygrid.org?teamId={{teamId}} hoặc sửa đổi tài khoản hiện có với tên người dùng này: {{username}} và đảm bảo rằng bạn đã chọn 'Hiển thị thông tin của tôi' trên trang Tiểu sử của tôi. Bạn có thể xem hướng dẫn từng bước trên trang wiki https://wiki.byteball.org/WCG_distribution#A_quick_guide_to_linking_your_wallet_with_WCG",
 	"usernameCanBeChanged": "Bạn có thể thay đổi nó sau này nếu bạn muốn. Nhấp vào liên kết bên dưới khi hoàn tất.",
 	"checkAccountButton": "Kiểm tra tài khoản của tôi",
 	"accountLinked": "Tài khoản WCG của bạn được liên kết thành công.",
-	"insertAddress": "Vui lòng nhập địa chỉ bạn muốn sử dụng làm địa chỉ thanh toán (nhấp vào '...' Chèn địa chỉ của tôi)",
+	"insertAddress": "Vui lòng chèn địa chỉ bạn muốn sử dụng làm địa chỉ thanh toán (nhấp vào nút '...' và sau đó nhấp vào 'Chèn địa chỉ của tôi')",
 	"addressLinked": "Xin chúc mừng!",
 	"setupComplete": "Thiết lập xong! Định kỳ, phần thưởng tương ứng với đóng góp của bạn cho dự án Mạng lưới Cộng đồng Thế giới trong tài khoản {{accountName}} (ID: {{accountID}}) sẽ được gửi đến tài khoản thanh toán của bạn.",
 	"changeLinkedButton": "Thay đổi tài khoản WCG liên kết",
 	"changePayoutButton": "Thay đổi địa chỉ thanh toán",
-	"changeUsernameButton": "Thay đổi tên tài khoản",
+	"changeUsernameButton": "Đổi Tên Tài Khoản",
 	"enterNewUsername": "Vui lòng nhập tên mới cho id tài khoản WCG của bạn {{accountID}}",
 	"cancelButton": "hủy bỏ",
-	"usernameValidated": "Đã xác thực tên mới.",
+	"usernameValidated": "Tên tài khoản mới đã được xác thực.",
 	"okButton": "ok",
-	"accountCheckFailed": "Kiểm tra tài khoản không thành công. Vui lòng đảm bảo bạn đặt {{accountName}} làm tên tài khoản và thử lại.",
-	"scoreFetchingFailed": "Không thể nhận bàn thắng WCG của bạn cho phân phối đang diễn ra. Vui lòng đảm bảo rằng tên tài khoản của bạn là: {{accountName}}",
-	"payoutForCurrentWork": "Một khoản thanh toán {{amountByte}}GB và {{amountAsset}} {{labelAsset}} đã được thực hiện để thưởng cho các đóng góp của bạn.",
+	"accountCheckFailed": "Kiểm tra tài khoản bị thất bại. Hãy đảm bảo rằng bạn đặt {{accountName}} làm tên người dùng và bạn đã chọn 'Hiển thị dữ liệu của tôi' trên trang Hồ sơ của tôi.",
+	"scoreFetchingFailed": "Không thể nhận điểm WCG của bạn cho bản phân phối hiện tai. Vui lòng đảm bảo tên người dùng của bạn là: {{accountName}} và bạn đã chọn 'Hiển thị dữ liệu của tôi' trên trang Hồ sơ của tôi.",
+	"payoutForCurrentWork": "Một khoản thanh toán {{amountByte}} GB và {{amountAsset}} {{labelAsset}} đã được thực hiện để thưởng cho các đóng góp của bạn.",
 	"errorOccurred": "Lỗi bất ngờ xảy ra. Quản trị đã được thông báo. Xin vui lòng thử lại sau một vài giờ.",
 	"seemsUnresponsive": "Lỗi, mạng lưới cộng đồng thế giới dường như không phản hồi. Xin vui lòng thử lại sau.",
 	"usernameMismatch": "Tên này không tương ứng với ID tài khoản WCG {{accountID}}",
@@ -23,6 +23,8 @@
 	"fixUsernameMismatch": "Tên tài khoản: {{accountName}} không tương ứng với ID {{accountID}}. Bạn sẽ không nhận được thanh toán cho đến khi bạn khắc phục vấn đề này hoặc liên kết tài khoản WCG mới.",
 	"visitWiki": "Để biết thêm chi tiết, xin vui lòng truy cập vào wiki của chúng tôi: https://wiki.byteball.org/WCG_distribution",
 	"retryButton": "Thử lại",
-	"anotherUsernameButton": "Thay đổi tên một tài khoản khác",
-	"payoutForPreviousWork": "Một khoản thanh toán {{amountByte}}GB và {{amountAsset}} {{labelAsset}} đã được thực hiện để thưởng cho các đóng góp vừa qua của bạn trong Mạng lưới Cộng đồng Thế giới."
+	"anotherUsernameButton": "Thay đổi sang một tài khoản khác",
+	"payoutForPreviousWork": "Một khoản thanh toán {{amountByte}} GB và {{amountAsset}} {{labelAsset}} đã được thực hiện để thưởng cho các đóng góp vừa qua của bạn trong Mạng lưới Cộng đồng Thế giới.",
+	"userInTeam": "Là thành viên của nhóm byteball.org, bạn sẽ nhận được tiền thưởng {{bonus}}%.",
+	"userNotInTeam": "Bạn có thể tham gia nhóm byteball.org và nhận tiền thưởng {{bonus}}%. Truy cập https://www.worldcommunitygrid.org/team/viewTeamInfo.do?teamId={{teamId}} để tham gia cùng chúng tôi."
 }
